--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,8 @@
 /* Da cancellare  */
 
 .my_test {
-    height: 100px;
     background-color: blueviolet;
+    border: 1px solid pink;
 }
 
 .my_test_second {
