Add main header content and fix behavior

--- a/style/style.css
+++ b/style/style.css
@@ -20,3 +20,11 @@
 .my_bg-dark-blue {
     background-color: #051e34;
 }
+
+.my-bg-md-blue {
+    background-color: #165bba;
+}
+
+.my_icon-font {
+    font-size: .5rem;
+}
