--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,20 @@
     opacity: .5;
 }
 
+/* Table */
+.my_table-name {
+    width: 60%;
+}
+
+.my_class-avatar {
+    width: 25px;
+    vertical-align: center;
+}
+
+.my_table_button {
+    width: 25px;
+    height: 25px;
+}
 
 /* Main app header */
 .my_sq-icon-container {
