--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,7 @@
     height: 100%;
     width: 100%;
     overflow-y: scroll;
-    background-color: red;
+    background-color: #f8f9fa;
 }
 
 .my_main-app-l {
