--- a/style/style.css
+++ b/style/style.css
@@ -38,13 +38,13 @@
     background-color: #f8f9fa;
 }
 
-.my_main-app-l {
+/* .my_main-app-l {
     height: 100%;
 }
 
 .my_main-app-r {
     height: 100%;
-}
+} */
 
 #my_logo-nav-lg {
     width: 120px;
